# lab06-1

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
SFML-2.5.1/: CMakeLists.txt
